--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Add permission for setting alarms -->
+    <uses-permission android:name="android.permission.SET_ALARM"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -9,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BitFitPart1"
+        android:theme="@style/Theme.MyApp"
         tools:targetApi="31">
 
         <!-- MainActivity Declaration -->
@@ -17,7 +22,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.BitFitPart1">
+            android:theme="@style/Theme.MyApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -29,7 +34,10 @@
             android:name=".EntryActivity"
             android:exported="true"
             android:label="Entry Activity"
-            android:theme="@style/Theme.BitFitPart1" />
+            android:theme="@style/Theme.MyApp" />
+
+        <!-- Register NotificationReceiver -->
+        <receiver android:name=".NotificationReceiver" android:exported="false"/>
 
     </application>
 
